--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,16 @@ jobs:
   pool:
     vmImage: VS2017-Win2016
   steps:
+    - task: 1ESLighthouseEng.PipelineArtifactCaching.RestoreCacheV1.RestoreCache@1
+      inputs:
+        keyfile: 'download_install_qt.ps1'
+        targetfolder: 'C:\\Qt/5.12.3/'
+        vstsFeed: '$(ArtifactFeed)'
     - task: PowerShell@2
       inputs:
         filePath: download_install_qt.ps1
+    - task: 1ESLighthouseEng.PipelineArtifactCaching.SaveCacheV1.SaveCache@1
+      inputs:
+        keyfile: 'download_install_qt.ps1'
+        targetfolder: 'C:\\Qt/5.12.3/'
+        vstsFeed: '$(ArtifactFeed)'
