--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,14 +5,18 @@ jobs:
   steps:
     - task: 1ESLighthouseEng.PipelineArtifactCaching.RestoreCacheV1.RestoreCache@1
       inputs:
-        keyfile: 'download_install_qt.ps1'
-        targetfolder: 'C:\\Qt/5.12.3/'
+        keyfile: 'azure-pipelines.yml'
+        targetfolder: 'C:\cachetest'
         vstsFeed: '$(ArtifactFeed)'
+    # - task: PowerShell@2
+    #   inputs:
+    #     filePath: download_install_qt.ps1
     - task: PowerShell@2
       inputs:
-        filePath: download_install_qt.ps1
+        targetType: inline
+        script: New-Item -ItemType directory -Path C:\cachetest; Write-Output Test | Out-File C:\cachetest\Test.txt          
     - task: 1ESLighthouseEng.PipelineArtifactCaching.SaveCacheV1.SaveCache@1
       inputs:
-        keyfile: 'download_install_qt.ps1'
-        targetfolder: 'C:\\Qt/5.12.3/'
+        keyfile: 'azure-pipelines.yml'
+        targetfolder: 'C:\cachetest'
         vstsFeed: '$(ArtifactFeed)'
