--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ jobs:
     - task: 1ESLighthouseEng.PipelineArtifactCaching.RestoreCacheV1.RestoreCache@1
       inputs:
         keyfile: 'azure-pipelines.yml'
-        targetfolder: 'C:\cachetest'
+        targetfolder: 'C:\\cachetest'
         vstsFeed: '$(ArtifactFeed)'
     # - task: PowerShell@2
     #   inputs:
@@ -18,5 +18,5 @@ jobs:
     - task: 1ESLighthouseEng.PipelineArtifactCaching.SaveCacheV1.SaveCache@1
       inputs:
         keyfile: 'azure-pipelines.yml'
-        targetfolder: 'C:\cachetest'
+        targetfolder: 'C:\\cachetest'
         vstsFeed: '$(ArtifactFeed)'
