--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,8 +5,8 @@ jobs:
   steps:
     - task: 1ESLighthouseEng.PipelineArtifactCaching.RestoreAndSaveCacheV1.RestoreAndSaveCache@1
       inputs:
-        keyfile: 'download_install_qt.ps1'
-        targetfolder: 'Qt'
+        keyfile: 'download_install_qt.ps1, azure-pipelines.yml'
+        targetfolder: 'Qt/5.12.3'
         vstsFeed: '$(ArtifactFeed)'
     - task: PowerShell@2
       inputs:
